# elastic-rs-example

./: .env  Cargo.toml  Makefile.toml  README.md  docker-compose.yaml
examples/: bulk_index.rs  ex1-cat-call.rs  ex2-index-document.rs
src/: lib.rs
src/api/: get.rs  index.rs  mod.rs
src/api/bulk/: request.rs  response.rs
