[package]
name = "elasticsearch_rs_examples"
version = "0.1.0"
authors = ["BrainVader <brainvade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "7.7.0-alpha.1"
tokio = { version = "*", features = ["full"] }
serde = "~1"
serde_json = "~1"